<resources>
    <string name="app_name">My currency app</string>
    <string name="cad_canadian_dollar">CAD - Canadian Dollar</string>
    <string name="currency_ratio">currencyRatio</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="eur_euro">EUR - Euro</string>
    <string name="currency_ratio2">currencyRatio</string>
    <string name="currency_result">currencyResult</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>